fix: prevent literal blocks from overlapping page TOC (fixes #64, #82)

--- a/css/site.css
+++ b/css/site.css
@@ -24,6 +24,10 @@ code {
 pre > code.hljs {
   border:thin solid lightgrey;
 }
+
+pre {
+  overflow: hidden;
+}
 pre > code.language-cli {
   border:none;
   font-weight: bold;
